fix scroll, added about page

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title>Aliance Production</title>
 </head>
 
-<body>
+<body class="main-page">
     <div class="mobile__overlay" data-js-header-overlay>
         <nav class="mobile__menu" aria-label="Мобильное меню">
             <div class="mobile__menu-inner">
                 <ul class="mobile__menu-list">
-                    <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">О компании</a></li>
+                    <li class="mobile__menu-item"><a href="/about.html" class="mobile__menu-link">О компании</a></li>
                     <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">Контрактное производство</a>
                         <ul class="mobile__submenu-list">
                             <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Автомобильная
@@ -95,7 +95,7 @@
                 </svg>
             </a>
             <ul class="header__navigation-list">
-                <li class="header__navigation-item"><a href="#" class="header__navigation-link">О&nbsp;компании</a></li>
+                <li class="header__navigation-item"><a href="/about.html" class="header__navigation-link">О&nbsp;компании</a></li>
                 <li class="header__navigation-item"><a href="#" class="header__navigation-link">Контрактное
                         производство</a></li>
                 <li class="header__navigation-item"><a href="#" class="header__navigation-link">Собственные торговые
