--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="mobile__menu" aria-label="Мобильное меню">
             <div class="mobile__menu-inner">
                 <ul class="mobile__menu-list">
-                    <li class="mobile__menu-item"><a href="/about.html" class="mobile__menu-link">О компании</a></li>
+                    <li class="mobile__menu-item"><a href="./about.html" class="mobile__menu-link">О компании</a></li>
                     <li class="mobile__menu-item"><a href="#" class="mobile__menu-link">Контрактное производство</a>
                         <ul class="mobile__submenu-list">
                             <li class="mobile__submenu-item"><a href="#" class="mobile__submenu-link">Автомобильная
@@ -95,7 +95,7 @@
                 </svg>
             </a>
             <ul class="header__navigation-list">
-                <li class="header__navigation-item"><a href="/about.html" class="header__navigation-link">О&nbsp;компании</a></li>
+                <li class="header__navigation-item"><a href="./about.html" class="header__navigation-link">О&nbsp;компании</a></li>
                 <li class="header__navigation-item"><a href="#" class="header__navigation-link">Контрактное
                         производство</a></li>
                 <li class="header__navigation-item"><a href="#" class="header__navigation-link">Собственные торговые
@@ -350,7 +350,7 @@
                             нами инновационный путь в значительной степени обусловливает важность дальнейших направлений
                             развития.
                         </p>
-                        <a href="./" class="button__link button__link--founder">Подробнее о компании</a>
+                        <a href="#" class="button__link button__link--founder">Подробнее о компании</a>
                     </div>
                 </div>
             </div>
@@ -609,7 +609,7 @@
                 </div>
                 <div class="footer__menu-wrapper">
                     <ul class="footer__menu-list footer__menu-list--bold footer__menu-list--1col">
-                        <li class="footer__menu-item"><a href="#" class=" footer__menu-link footer__menu-link--bold">О
+                        <li class="footer__menu-item"><a href="./about.html" class=" footer__menu-link footer__menu-link--bold">О
                                 компании</a></li>
                         <li class="footer__menu-item"><a href="#"
                                 class="footer__menu-link footer__menu-link--bold">Новости</a></li>
