added 3 hero options

--- a/about.html
+++ b/about.html
@@ -54,79 +54,59 @@
     </nav>
 
     <main class="about-page">
-        <section class="section section__about">
-            <div class="container">
-                <div class="section__hero section__hero--bg-gray">
-
+        <section class="section section--full">
+            <div class="hero hero--gray section--spaced">
+                <div class="container">
                     <div class="separator"></div>
-                    <h1 class="section__title section__about-title">О компании</h1>
-                    <span class="">Главная - <span class="">О компании</span></span>
+                    <h1 class="section__title hero__title">О компании</h1>
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Главная</a></li>
+                        <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">О компании</a></li>
+                    </ul>
                 </div>
             </div>
-      
         </section>
-        <section class="section production">
-            <div class="container">
-                <div class="separator"></div>
-                <h2 class="section__title">Контрактное производство</h2>
-                <ul class="card__list">
-                    <li class="card__item card__item--product">
-                        <div class="card__body">
-                            <h3 class="card__title">Автомобильная химия</h3>
-                            <p class="card__description">Безусловно, сплочённость команды профессионалов позволяет
-                                оценить
-                                значение форм воздействия.</p>
+
+        <section class="section section--full">
+            <div class="hero hero--gray section--spaced hero--small">
+                <div class="container">
+                    <div class="hero__wrapper">
+                        <div class="hero__content">
+                            <div class="separator"></div>
+                            <h1 class="section__title hero__title">Автомобильная химия</h1>
+                            <ul class="breadcrumb">
+                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Главная</a></li>
+                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Контрактное
+                                        производство</a></li>
+                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Автомобильная
+                                        химия</a></li>
+                            </ul>
                         </div>
-                        <img class="card__image" src="./images/cards-image/1.png" alt="Автомобильная химия" width="478"
-                            height="300" loading="lazy">
-                    </li>
-                    <li class="card__item card__item--product">
-                        <div class="card__body">
-                            <h3 class="card__title">Бытовая химия</h3>
-                            <p class="card__description">А также стремящиеся вытеснить традиционное производство,
-                                нанотехнологии функционально разнесены на независимые элементы.</p>
-                        </div>
-                        <img class="card__image" src="./images/cards-image/2.png" alt="Бытовая химия" width="478"
-                            height="300" loading="lazy">
-                    </li>
-                    <li class="card__item card__item--product">
-                        <div class="card__body">
-                            <h3 class="card__title">Дезинфицирующие средства</h3>
-                            <p class="card__description">Лишь интерактивные прототипы призваны к ответу.</p>
-                        </div>
-                        <img class="card__image" src="./images/cards-image/3.png" alt="Дезинфицирующие средства"
-                            width="478" height="300" loading="lazy">
-                    </li>
-                    <li class="card__item card__item--product">
-                        <div class="card__body">
-                            <h3 class="card__title">Пищевые аэрозоли</h3>
-                            <p class="card__description">Безусловно, сплочённость команды профессионалов позволяет
-                                оценить
-                                значение форм воздействия.</p>
-                        </div>
-                        <img class="card__image" src="./images/cards-image/3.png" alt="Пищевые аэрозоли" width="478"
-                            height="300" loading="lazy">
-                    </li>
-                    <li class="card__item card__item--product">
-                        <div class="card__body">
-                            <h3 class="card__title">Косметическая продукция</h3>
-                            <p class="card__description">Лишь интерактивные прототипы призваны к ответу.</p>
-                        </div>
-                        <img class="card__image" src="./images/cards-image/4.png" alt="Косметическая продукция"
-                            width="478" height="300" loading="lazy">
-                    </li>
-                    <li class="card__item card__item--product">
-                        <div class="card__body">
-                            <h3 class="card__title">Краски аэрозольные</h3>
-                            <p class="card__description">А также стремящиеся вытеснить традиционное производство,
-                                нанотехнологии функционально разнесены на независимые элементы.</p>
-                        </div>
-                        <img class="card__image" src="./images/cards-image/5.png" alt="Краски аэрозольные" width="478"
-                            height="300" loading="lazy">
-                    </li>
-                </ul>
+                        <img class="hero__image" src="./images/hero/hero-avto-him.png" alt="" width="480" height="240"
+                            loading="lazy">
+                    </div>
+                </div>
             </div>
         </section>
+
+        <section class="section section--full">
+            <div class="hero section--spaced hero--image">
+                <div class="container">
+                    <div class="separator"></div>
+                    <h1 class="section__title hero__title hero__title--light">Современная методология разработки
+                        одухотворила всех причастных</h1>
+                    <ul class="breadcrumb breadcrumb--light">
+                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Главная</a></li>
+                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Блог</a></li>
+                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Современная методология
+                                разработки одухотворила всех причастных</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+
+
         <section class="section cta">
             <div class="background-grey section__cta">
                 <img class="cta__image" src="./images/cta-img.png" alt="" loading="lazy">
