--- a/about.html
+++ b/about.html
@@ -66,47 +66,7 @@
                 </div>
             </div>
         </section>
-
-        <section class="section section--full">
-            <div class="hero hero--gray section--spaced hero--small">
-                <div class="container">
-                    <div class="hero__wrapper">
-                        <div class="hero__content">
-                            <div class="separator"></div>
-                            <h1 class="section__title hero__title">Автомобильная химия</h1>
-                            <ul class="breadcrumb">
-                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Главная</a></li>
-                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Контрактное
-                                        производство</a></li>
-                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Автомобильная
-                                        химия</a></li>
-                            </ul>
-                        </div>
-                        <img class="hero__image" src="./images/hero/hero-avto-him.png" alt="" width="480" height="240"
-                            loading="lazy">
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section section--full">
-            <div class="hero section--spaced hero--image">
-                <div class="container">
-                    <div class="separator"></div>
-                    <h1 class="section__title hero__title hero__title--light">Современная методология разработки
-                        одухотворила всех причастных</h1>
-                    <ul class="breadcrumb breadcrumb--light">
-                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Главная</a></li>
-                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Блог</a></li>
-                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Современная методология
-                                разработки одухотворила всех причастных</a></li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-
-
+        
         <section class="section cta">
             <div class="background-grey section__cta">
                 <img class="cta__image" src="./images/cta-img.png" alt="" loading="lazy">
@@ -225,3 +185,41 @@
     <script src="./src/swiper-bundle.min.js" defer></script>
     <script src="./src/index.js" defer></script>
 </body>
+
+        <!-- <section class="section section--full">
+            <div class="hero hero--gray section--spaced hero--small">
+                <div class="container">
+                    <div class="hero__wrapper">
+                        <div class="hero__content">
+                            <div class="separator"></div>
+                            <h1 class="section__title hero__title">Автомобильная химия</h1>
+                            <ul class="breadcrumb">
+                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Главная</a></li>
+                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Контрактное
+                                        производство</a></li>
+                                <li class="breadcrumb__item"><a class="breadcrumb__link" href="#">Автомобильная
+                                        химия</a></li>
+                            </ul>
+                        </div>
+                        <img class="hero__image" src="./images/hero/hero-avto-him.png" alt="" width="480" height="240"
+                            loading="lazy">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section section--full">
+            <div class="hero section--spaced hero--image">
+                <div class="container">
+                    <div class="separator"></div>
+                    <h1 class="section__title hero__title hero__title--light">Современная методология разработки
+                        одухотворила всех причастных</h1>
+                    <ul class="breadcrumb breadcrumb--light">
+                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Главная</a></li>
+                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Блог</a></li>
+                        <li class="breadcrumb__item--light"><a class="breadcrumb__link" href="#">Современная методология
+                                разработки одухотворила всех причастных</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section> -->
